<resources>
    <string name="app_name">Togepy</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="action_settings">Settings</string>
    <string name="drawer_metronome">Metronome</string>
    <string name="drawer_information">Information</string>
    <string name="drawer_settings">Settings</string>
    <string name="start_metronome">START</string>
    <string name="timePlusOne">+1</string>
    <string name="timeMinusOne">-1</string>
    <string name="timeMinusFive">-5</string>
    <string name="timePlusFive">+5</string>
    <string name="stop_metronome">STOP</string>
    <string name="title_metronome">Metronome</string>
    <string name="title_tuner">Tuner</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="startingTimeSignature">+</string>
    <string name="startingTimeSignatureMinus">-</string>

    <string name="tunerNoteDefaultText">Note</string>
    <string name="tunerFrequencyDefaultText">Frequency</string>
    <string name="tunerStartButtonText">START TUNING</string>
    <string name="currentStringDefaultText">Current string</string>
    <string name="tunerOffsetDefaultText">Offset</string>
    <string name="tunerLowText">♭</string>
    <string name="tunerHighText">♯</string>
</resources>
