<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" >


        <TextView
            android:id="@+id/pitchFreq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="BPM"
            android:textSize="35px"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_gravity="center"
            app:layout_constraintVertical_bias="1.0" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintVertical_bias="0.498"
            android:layout_gravity="center"
            android:id="@+id/linearLayout">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/timeMinusOne"
                    android:layout_width="90px"
                    android:layout_height="wrap_content"
                    android:onClick="changeMetronomeTime"
                    android:textStyle="bold"
                    android:text="@string/timeMinusOne" />

                <Button
                    android:id="@+id/timeMinusFive"
                    android:layout_width="90px"
                    android:layout_height="wrap_content"
                    android:onClick="changeMetronomeTime"
                    android:textStyle="bold"
                    android:text="@string/timeMinusFive" />

            </LinearLayout>

            <Button
                android:id="@+id/activate_metronome"
                android:layout_width="220px"
                android:layout_height="120px"
                android:layout_gravity="center"
                android:onClick="activateMetronome"
                android:text="@string/start_metronome"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/timePlusOne"
                    android:layout_width="90px"
                    android:layout_height="wrap_content"
                    android:onClick="changeMetronomeTime"
                    android:textStyle="bold"
                    android:text="@string/timePlusOne" />

                <Button
                    android:id="@+id/timePlusFive"
                    android:layout_width="90px"
                    android:layout_height="wrap_content"
                    android:onClick="changeMetronomeTime"
                    android:textStyle="bold"
                    android:text="@string/timePlusFive" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <TextView
            android:id="@+id/timeSignatureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Time Signatures"
            android:textSize="35px"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/timeSignatureTop"
                        android:layout_width="90px"
                        android:layout_height="wrap_content"
                        android:onClick="changeTimeSignature"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:text="@string/startingTimeSignature" />
                    <TextView
                        android:id="@+id/timeSignatureTopTextView"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="4/4"
                        android:textSize="93px"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <Button
                        android:id="@+id/timeSignatureTopMinus"
                        android:layout_width="90px"
                        android:layout_height="wrap_content"
                        android:onClick="changeTimeSignature"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:text="@string/startingTimeSignatureMinus" />


                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/timeSignatureBottom"
                        android:layout_width="90px"
                        android:layout_height="wrap_content"
                        android:onClick="changeTimeSignature"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:text="@string/startingTimeSignature" />
                    <TextView
                        android:id="@+id/timeSignatureBottomTextView"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text=" --"
                        android:textSize="93px"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/timeSignatureTopTextView"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                    <Button
                        android:id="@+id/timeSignatureBottomMinus"
                        android:layout_width="90px"
                        android:layout_height="wrap_content"
                        android:onClick="changeTimeSignature"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:text="@string/startingTimeSignatureMinus" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />




</androidx.constraintlayout.widget.ConstraintLayout>